--- a/about.html
+++ b/about.html
@@ -398,7 +398,7 @@ color: #FF003D;
 Тут вас ждут пугающие препятствия. Вы можете заглянуть в окна страха, пройтись <br>по запутанному лабиринту, стать свидетелем ужасного представления, пообедать страшынми на вид блюдами или даже упасть в яму! </p1>
     <img class="logo" src="images/logo.png" alt="logo">
     <!-- <header class="header"> -->
-        <a href="./main.html" class="mainlink">Главная</a>
+        <a href="./index.html" class="mainlink">Главная</a>
         <a href="./about.html" class="aboutlink">О нас</a>
         <a href="./calendar.html" class="calendarlink">Билеты</a>
         <a href="./places.html" class="placeslink">Места</a>
@@ -410,7 +410,7 @@ color: #FF003D;
             <span></span>
           </label>
           <ul class="menu__box">
-            <li><a class="menu__item" href="./main.html">Главная</a></li>
+            <li><a class="menu__item" href="./index.html">Главная</a></li>
             <li><a class="menu__item" href="./about.html">О нас</a></li>
             <li><a class="menu__item" href="./calendar.html">Билеты</a></li>
             <li><a class="menu__item" href="./places.html">Места</a></li>
