--- a/calendar.html
+++ b/calendar.html
@@ -697,7 +697,7 @@
         <span></span>
       </label>
       <ul class="menu__box">
-        <li><a class="menu__item" href="./main.html">Главная</a></li>
+        <li><a class="menu__item" href="./index.html">Главная</a></li>
         <li><a class="menu__item" href="./about.html">О нас</a></li>
         <li><a class="menu__item" href="./calendar.html">Билеты</a></li>
         <li><a class="menu__item" href="./places.html">Места</a></li>
@@ -716,7 +716,7 @@
 
     <a type="button" href="./ticket.html" class="btn"name="button">Купить</a>
 
-     <p1><a href="./main.html" class="mainlink">Главная</a></p1>
+     <p1><a href="./index.html" class="mainlink">Главная</a></p1>
     <a href="./about.html" class="aboutlink">О нас</a>
     <a href="./calendar.html" class="calendarlink">Билеты</a>
     <a href="./places.html" class="placeslink">Места</a>
