--- a/places.html
+++ b/places.html
@@ -839,7 +839,7 @@ height: 1px;
     </style>
   </head>
   <body bgcolor="CC0031">
-    <p1><a href="./main.html" class="mainlink">Главная</a></p1>
+    <p1><a href="./index.html" class="mainlink">Главная</a></p1>
     <a href="./about.html" class="aboutlink">О нас</a>
     <a href="./calendar.html" class="calendarlink">Билеты</a>
     <a href="./places.html" class="placeslink">Места</a>
@@ -847,7 +847,7 @@ height: 1px;
 
     <a href="./labirint.html" class="labirintlink">II</a>
     <a href="./scene.html" class="scenelink">III</a>
-    <a href="./index.html" class="zallink">IV</a>
+    <a href="./index1.html" class="zallink">IV</a>
     <a href="./window.html" class="windowlink">I</a>
     <a href="./zal.html" class="indexlink">V</a>
     <div class="hamburger-menu">
@@ -856,7 +856,7 @@ height: 1px;
         <span></span>
       </label>
       <ul class="menu__box">
-        <li><a class="menu__item" href="./main.html">Главная</a></li>
+        <li><a class="menu__item" href="./index.html">Главная</a></li>
         <li><a class="menu__item" href="./about.html">О нас</a></li>
         <li><a class="menu__item" href="./calendar.html">Билеты</a></li>
         <li><a class="menu__item" href="./places.html">Места</a></li>
