--- a/scene.html
+++ b/scene.html
@@ -631,7 +631,7 @@ color: #FFFFFF;
   <img class="scene" src="images/scene.png" alt="scene">
   <img class="scene2" src="images/scene2.png" alt="scene2">
   <img class="scene3" src="images/scene3.png" alt="scene3">
-  <p1><a href="./main.html" class="mainlink">Главная</a></p1>
+  <p1><a href="./index.html" class="mainlink">Главная</a></p1>
   <a href="./about.html" class="aboutlink">О нас</a>
   <a href="./calendar.html" class="calendarlink">Билеты</a>
   <a href="./places.html" class="placeslink">Места</a>
