--- a/test.html
+++ b/test.html
@@ -625,7 +625,7 @@
           }
 
 
-       } 
+       }
             @media only screen and (min-width: 769px){
               .menu__item, .menu__box, .menu__btn, .checkbox .menu__toggle, .hamburger-menu{ visibility: hidden;}
             }
@@ -635,7 +635,7 @@
     </style>
   </head>
   <body bgcolor="#000000">
-    <p1><a href="./main.html" class="mainlink">Главная</a></p1>
+    <p1><a href="./index.html" class="mainlink">Главная</a></p1>
     <a href="./about.html" class="aboutlink">О нас</a>
     <a href="./calendar.html" class="calendarlink">Билеты</a>
     <a href="./places.html" class="placeslink">Места</a>
@@ -661,7 +661,7 @@
         <span></span>
       </label>
       <ul class="menu__box">
-        <li><a class="menu__item" href="./main.html">Главная</a></li>
+        <li><a class="menu__item" href="./index.html">Главная</a></li>
         <li><a class="menu__item" href="./about.html">О нас</a></li>
         <li><a class="menu__item" href="./calendar.html">Билеты</a></li>
         <li><a class="menu__item" href="./places.html">Места</a></li>
