--- a/store.html
+++ b/store.html
@@ -995,7 +995,7 @@ z-index: 10;
       <span></span>
     </label>
     <ul class="menu__box">
-      <li><a class="menu__item" href="./main.html">Главная</a></li>
+      <li><a class="menu__item" href="./index.html">Главная</a></li>
       <li><a class="menu__item" href="./about.html">О нас</a></li>
       <li><a class="menu__item" href="./calendar.html">Билеты</a></li>
       <li><a class="menu__item" href="./places.html">Места</a></li>
@@ -1004,7 +1004,7 @@ z-index: 10;
   </div>
 
     <img class="logo" src="images/logo.png" alt="logo">
-    <a href="./main.html" class="mainlink">Главная</a>
+    <a href="./index.html" class="mainlink">Главная</a>
     <a href="./about.html" class="aboutlink">О нас</a>
     <a href="./calendar.html" class="calendarlink">Билеты</a>
     <a href="./places.html" class="placeslink">Места</a>
