--- a/zal.html
+++ b/zal.html
@@ -657,7 +657,7 @@
   <span></span>
 </label>
 <ul class="menu__box">
-  <li><a class="menu__item" href="./main.html">Главная</a></li>
+  <li><a class="menu__item" href="./index.html">Главная</a></li>
   <li><a class="menu__item" href="./about.html">О нас</a></li>
   <li><a class="menu__item" href="./calendar.html">Билеты</a></li>
   <li><a class="menu__item" href="./places.html">Места</a></li>
